overlays/prod-both/patch-frontapp-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
spec:
  template:
    spec:
      containers:
      - name: frontapp
