overlays/prod-both/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
spec:
  rules:
  - host: application.cubix.localhost
    http:
      paths:
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: frontapp
            port:
              number: 80
